add basic html structure

--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="jajanken.js"></script>
-  <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="scripts/jajanken.js"></script>
+  <title>Jajanken</title>
 </head>
 <body>
-  
+  <header class="header"><h1>Rock Paper Scissors</h1></header>
+  <div class="main">
+    <div class="choices">
+      <button class="btn" id="rock">✊</button>
+      <button class="btn" id="paper">🖐️</button>
+      <button class="btn" id="scissors">✌️</button>
+    </div>
+    <div class="stats">
+      <p>You:</p>
+      <p>Computer:</p>
+    </div>
+  </div>
+  <div class="footer">Copyright © daimox</div>
 </body>
 </html>
