--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="scripts/jajanken.js"></script>
+  <script src="scripts/jajanken.js" defer></script>
   <title>Jajanken</title>
 </head>
 <body>
   <header class="header"><h1>Rock Paper Scissors</h1></header>
   <div class="main">
+    <div class="stats">
+      <h2>Choose wisely!</h2>
+      <h3>Win 5 rounds to win the game</h3>
+      <p id="player">🐵: 0</p>
+      <p id="computer">🤖: 0</p>
+    </div>
     <div class="choices">
       <button class="btn" id="rock">✊</button>
       <button class="btn" id="paper">🖐️</button>
       <button class="btn" id="scissors">✌️</button>
-    </div>
-    <div class="stats">
-      <p>You:</p>
-      <p>Computer:</p>
     </div>
   </div>
   <div class="footer">Copyright © daimox</div>
