--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
     <div class="stats">
       <h2>Choose wisely!</h2>
       <h3>Win 5 rounds to win the game</h3>
-      <p id="player">🐵: 0</p>
-      <p id="computer">🤖: 0</p>
+      <div class="scoreboard">
+        <div class="scoreContainer">
+          <p id="playerIcon">❔</p>
+          <p id="player">🐵: 0</p>
+        </div>
+        <div class="scoreContainer">
+          <p id="cpuIcon">❔</p>
+          <p id="computer">🤖: 0</p>
+        </div>
+      </div>
     </div>
     <div class="choices">
       <button class="btn" id="rock">✊</button>
